/**
 * #  Service
 * Block stream messages that report the results of transactions handled
 * by the `smart contract` service.
 *
 * > REVIEW NOTE
 * >> The use of sidecar records is a bit odd here. We may find it more
 * >> effective to extract the actual changes into proper output messages
 * >> and fields included in the ethereum call output and/or related state
 * >> changes items, and remove the whole sidecar concept going forward.
 *
 * ### Keywords
 * The key words "MUST", "MUST NOT", "REQUIRED", "SHALL", "SHALL NOT",
 * "SHOULD", "SHOULD NOT", "RECOMMENDED", "MAY", and "OPTIONAL" in this
 * document are to be interpreted as described in
 * [RFC2119](https://www.ietf.org/rfc/rfc2119) and clarified in
 * [RFC8174](https://www.ietf.org/rfc/rfc8174).
 */
syntax = "proto3";

package com.hedera.hapi.block.stream.output;

// SPDX-License-Identifier: Apache-2.0
option java_package = "com.hedera.hapi.block.stream.output.protoc";
// <<<pbj.java_package = "com.hedera.hapi.block.stream.output">>> This comment is special code for setting PBJ Compiler java package
option java_multiple_files = true;

import "services/contract_types.proto";

/**
 * Block Stream data for a `contractCallMethod` transaction.
 *
 * This message SHALL NOT duplicate information already contained in
 * the original transaction.
 */
message CallContractOutput {
    /**
     * An EVM contract call result.
     * <p>
     * This field SHALL contain all of the data produced by the contract
     * call transaction as well as basic accounting results.
     */
    proto.ContractFunctionResult contract_call_result = 1;
}

/**
 * Block Stream data for a `createContract` transaction.
 *
 * This message SHALL NOT duplicate information already contained in
 * the original transaction.
 */
message CreateContractOutput {
    /**
     * An EVM contract call result.
     * <p>
     * This field SHALL contain all of the data produced by the contract
     * create transaction as well as basic accounting results.
     */
    proto.ContractFunctionResult contract_create_result = 1;
}

// no evm exec, only modified entity
/**
 * Block Stream data for a `updateContract` transaction.
 *
 * This message SHALL NOT duplicate information already contained in
 * the original transaction.
 */
message UpdateContractOutput {}

// no evm exec, only modified entity
/**
 * Block Stream data for a `deleteContract` transaction.
 *
 * This message SHALL NOT duplicate information already contained in
 * the original transaction.
 */
message DeleteContractOutput {}

/**
 * Block Stream data for a contract `systemUndelete` transaction.
 *
 * This message SHALL NOT duplicate information already contained in
 * the original transaction.
 */
message SystemUnDeleteContractOutput {}

/**
 * Block Stream data for a contract `systemDelete` transaction.
 *
 * This message SHALL NOT duplicate information already contained in
 * the original transaction.
 */
message SystemDeleteContractOutput {}

/**
 * Block Stream data for a `callEthereum` transaction.
 *
 * This message SHALL NOT duplicate information already contained in
 * the original transaction.
 */
message EthereumOutput {
    /**
     * An ethereum hash value.
     * <p>
     * This SHALL be a keccak256 hash of the ethereumData.
     */
    bytes ethereum_hash = 1;

    oneof eth_result {
        /**
         * A result for an Ethereum Transaction executed as a call.
         * <p>
         * This field SHALL contain all of the data produced by the contract
         * call transaction as well as basic accounting results.
         */
        proto.ContractFunctionResult ethereum_call_result = 2;

        /**
         * A result for an Ethereum Transaction executed as a create.
         * <p>
         * This field SHALL contain all of the data produced by the contract
         * create transaction as well as basic accounting results.
         */
        proto.ContractFunctionResult ethereum_create_result = 3;
    }
}

